--- a/mysite/lang/en.yml
+++ b/mysite/lang/en.yml
@@ -1,7 +1,14 @@
 en:
+  AkismetField:
+    SPAM: 'Your comment has been rejected because a word or character has been treated as spam. Please make sure your comment is using appropriate language before submitting it again.'
+  CommentsInterface_singlecomment_ss:
+    APPROVE: Approve
+    ISNTSPAM: 'Not spam'
+    ISSPAM: Spam
+    REMCOM: Delete
   HomePage:
     DESCRIPTION: 'Entry to the site. Has carousel, featured panels, quicklinks and news summaries'
-    PLURALNAME: 'Base Pages'
+    PLURALNAME: 'Home Pages'
     SINGULARNAME: 'Home Page'
   Page:
     DESCRIPTION: 'Generic content page'
@@ -10,10 +17,3 @@ en:
   SiteTree:
     PLURALNAME: Pages
     SINGULARNAME: Page
-  CommentsInterface_singlecomment_ss:
-    APPROVE: 'Approve'
-    ISNTSPAM: 'Not spam'
-    ISSPAM: 'Spam'
-    REMCOM: 'Delete'
-  AkismetField:
-    SPAM: 'Your comment has been rejected because a word or character has been treated as spam. Please make sure your comment is using appropriate language before submitting it again.'
